# midimapper

./: Cargo.toml
examples/: launchcontrol.json  map1.rs
mappings/: launchcontrol.json
src/: lib.rs  mapping.rs
