[package]
name = "midimapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
midir = "0.6.2"
log = "0.4"
anyhow = "1.0"
tokio = { version = "1.8.0", features = ["full"] }